--- a/exercicio01/index.html
+++ b/exercicio01/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button>Morango</button>
-    <button>Abacate</button>
-    <button>Melão</button>
-    <button>Manga</button>
+    <button onclick="window.location.href= 'soma.html' ">Soma</button>
+    <button onclick="window.location.href= 'sub.html' ">Subtração"</button>
+    <button onclick="window.location.href= 'div.html' ">Divisao"</button>
+    <button onclick="window.location.href= 'multi.html' ">Multipica"</button>
 </body>
 </html>
