--- a/exercicio01/index.html
+++ b/exercicio01/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <button onclick="window.location.href= 'soma.html' ">Soma</button>
-    <button onclick="window.location.href= 'sub.html' ">Subtração"</button>
-    <button onclick="window.location.href= 'div.html' ">Divisao"</button>
-    <button onclick="window.location.href= 'multi.html' ">Multipica"</button>
+    <button onclick="window.location.href= 'sub.html' ">Subtração</button>
+    <button onclick="window.location.href= 'div.html' ">Divisao</button>
+    <button onclick="window.location.href= 'multi.html' ">Multipica</button>
 </body>
 </html>
