--- a/exercicio01/multi.html
+++ b/exercicio01/multi.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multipica</title>
+    <title>Multiplicação</title>
 </head>
 <body>
-    <h1>*</h1>
+    <h1>Cálculo da Multiplicação</h1>
+    <br>
+    <label for="n5">Digite o primeiro número</label><br>
+    <input type="number" id="n5"><br> 
+    <label for="n6">Digite o segundo número</label><br>
+    <input type="number" id="n6"><br><br>
+    <button onclick="multi()">CALCULAR</button>
+    <h2 id="respMulti"></h2>
+
+    <script src="script.js"></script>
 </body>
 </html>
