--- a/exercicio01/soma.html
+++ b/exercicio01/soma.html
@@ -6,6 +6,15 @@
     <title>Soma</title>
 </head>
 <body>
-    <h1>+</h1>
+    <h1>Cálculo de soma</h1>
+    <br>
+    <label for="n1">Digite o primeiro número</label><br>
+    <input type="number" id="n1"><br> 
+    <label for="n2">Digite o segundo número</label><br>
+    <input type="number" id="n2"><br><br>
+    <button onclick="soma()">CALCULAR</button>
+    <h2 id="respSoma"></h2>
+
+    <script src="script.js"></script>
 </body>
 </html>
