--- a/exercicio01/sub.html
+++ b/exercicio01/sub.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subitração</title>
+    <title>Subtração</title>
 </head>
 <body>
-    <h1>-</h1>
+    <h1>Cálculo da Subtração</h1>
+    <br>
+    <label for="n3">Digite o primeiro número</label><br>
+    <input type="number" id="n3"><br> 
+    <label for="n4">Digite o segundo número</label><br>
+    <input type="number" id="n4"><br><br>
+    <button onclick="sub()">CALCULAR</button>
+    <h2 id="respSub"></h2>
+
+    <script src="script.js"></script>
 </body>
 </html>
