--- a/exercicio01/index.html
+++ b/exercicio01/index.html
@@ -11,5 +11,6 @@
     <button onclick="window.location.href= 'sub.html' ">Subtração</button>
     <button onclick="window.location.href= 'div.html' ">Divisao</button>
     <button onclick="window.location.href= 'multi.html' ">Multipica</button>
+    <button onclick="window.location.href= 'media.html' ">Media</button>
 </body>
 </html>
