--- a/sala07-tds/exercicio01/sub.html
+++ b/sala07-tds/exercicio01/sub.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subtração</title>
 </head>
-<body>
+<body class="background">
     <h1>Cálculo da Subtração</h1>
     <br>
     <label for="n3">Digite o primeiro número</label><br>
@@ -13,6 +13,7 @@
     <label for="n4">Digite o segundo número</label><br>
     <input type="number" id="n4"><br><br>
     <button onclick="sub()">CALCULAR</button>
+</div>
     <h2 id="respSub"></h2>
 
     <script src="script.js"></script>
