--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -1,23 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Harry Potter</title>
+    <title>HP</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        crossorigin="anonymous">
+
 <body>
     <nav>
-        <a href=""><i class="fa-solid fa-heading"></i><p>HARRYY</p></a>
-        <a href=""><i class="fa-solid fa-chess-knight"></i><p>RON</p></a>
-        <a href=""><i class="fa-solid fa-cat"></i></i><p>HERMIONE</p></a>
-        <a href=""><i class="fa-solid fa-moon"></i><p>LUNA</p></a>
+        <a href="#s1"><i class="fa-solid fa-heading"></i>
+            <p>POTTER</p>
+        </a>
+        <a href="#s2"><i class="fa-solid fa-chess-knight"></i>
+            <p>RON</p>
+        </a>
+        <a href="#s3"><i class="fa-solid fa-cat"></i></i>
+            <p>HERMIONE</p>
+        </a>
+        <a href="#s4"><i class="fa-solid fa-moon"></i>
+            <p>LUNA</p>
+        </a>
     </nav>
     <main>
-        <section id="s1"></section>
+        <section id="s1">
+            <div class="wrap-img">
+                <img src="./images/potter.avif" alt="Imagem exemplo">
+            </div>
+            <div class="wrap-words">
+                <h2>HARRY POTTER</h2>
+                <p>Harry Potter é um jovem garoto britânico, que vive na Rua dos Alfeneiros com seus tios e seu
+                    desprezível primo Duda. Ele foi deixado na porta de seus tios por Albus Dumbledore, Minerva e
+                    Hagrid, todos bruxos, pois seus pais haviam sido mortos por Lord Voldemort, um grande bruxo das
+                    trevas.</p>
+            </div>
+        </section>
         <section id="s2"></section>
         <section id="s3"></section>
         <section id="s4"></section>
     </main>
 </body>
+
 </html>
