--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -27,7 +27,7 @@
     <main>
         <section id="s1">
             <div class="wrap-img">
-                <img src="./images/potter.avif" alt="Imagem exemplo">
+                <img class="ima-s1" src="./images/potter.avif" alt="Imagem exemplo">
             </div>
             <div class="wrap-words">
                 <h2>HARRY POTTER</h2>
